// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embedded React Element 1`] = `
Array [
  "This is a ",
  <a
    href="https://www.example.com"
  >
    link
  </a>,
]
`;

exports[`Embedded React Element with non-string value 1`] = `
Array [
  "This is a ",
  <a
    href={
      Object {
        "toString": [Function],
        "valueOf": [Function],
      }
    }
  />,
]
`;

exports[`FormattedDate 1`] = `"August"`;

exports[`React Element as value 1`] = `
Array [
  "Hello world",
  " ",
  "AnyComponent",
  " ",
  "I meet ",
  "John",
  " ",
  "ichi",
]
`;

exports[`Suppress any error in production mode 1`] = `""`;

exports[`argument 1`] = `
Array [
  "I meet ",
  "John",
]
`;

exports[`imperative 1`] = `
<input
  placeholder="Hello world"
/>
`;

exports[`plain.string 1`] = `"Hello world"`;

exports[`plural 1`] = `"four"`;
